# devguard

./: .dockerignore  .env.example  .gitignore  .guardian-email-history.json  .guardian-email-thread  .pre-commit-hooks.yaml  Dockerfile  LICENSE  README.md  README_SPEC.md  devguard.spec.example.yaml  guardian.spec.example.yaml  guardian.spec.fast.yaml  guardian.spec.yaml  justfile  package.json  pyproject.toml  test_email_history.py  validate_email_system.py
.github/: settings.yml
.github/workflows/: devguard-self-scan.yml  guardian-self-scan.yml  publish.yml  sweep-public-repos.yml
archive/2025-02/: PROJECT_FLAUDIT_CRITIQUE.md
archive/2025-12/: CODE_QUALITY_IMPROVEMENTS.md  COST_CEILING_ANALYSIS.md  EMAIL_DESIGN_ISSUES.md  FIXES_COMPLETED.md  HISTORY_PERSISTENCE.md  REPORTING_ARCHITECTURE.md  TRACKWEAVE_AND_TRACING_REVIEW.md  TRIAGE_PRIORITIES.md  UNIFIED_EMAIL_SYSTEM.md  VALIDATION_COMPLETE.md  VERIFICATION_SUMMARY.md  WAF_STATUS_REVIEW.md
devguard/: INTEGRATION_SUMMARY.md  __init__.py  __main__.py  cli.py  cli_helpers.py  config.py  core.py  dashboard.py  discovery.py  http_client.py  llm_service.py  mcp_server.py  metrics.py  models.py  reporting.py  sarif.py  spec.py  utils.py
devguard/checkers/: __init__.py  api_usage.py  aws_cost.py  aws_iam.py  base.py  container.py  domain.py  firecrawl.py  fly.py  github.py  npm.py  npm_security.py  private_docs.py  redteam.py  secret.py  swarm.py  tailscale.py  tailsnitch.py  tavily.py  vercel.py
devguard/scripts/: ANALYSIS_SUMMARY.md  README.md  auto_fix_recommendations.py  generate_security_report.py  prepublish_check.sh  redteam_npm_packages.py  review_all_repos.py
devguard/sweeps/: __init__.py  _common.py  ai_editor_config_audit.py  cargo_publish_audit.py  credential_file_audit.py  dependency_audit.py  git_identity_audit.py  gitignore_audit.py  local_dev.py  local_dirty_worktree_secrets.py  mcp_security_audit.py  pre_commit_audit.py  project_flaudit.py  public_github_secrets.py  publish_audit.py  repo_hygiene.py  ssh_key_audit.py
docs/: legacy-monitoring.md
examples/: github-workflow.yml
examples/docker/: README.md
grafana/: README.md
grafana/dashboards/: devguard.json  guardian.json
guardian/: INTEGRATION_SUMMARY.md  __main__.py  cli.py  cli_helpers.py  config.py  core.py  dashboard.py  discovery.py  llm_service.py  mcp_server.py  metrics.py  reporting.py  sarif.py  spec.py  utils.py
guardian/checkers/: __init__.py  api_usage.py  aws_cost.py  aws_iam.py  base.py  container.py  domain.py  firecrawl.py  fly.py  github.py  npm.py  npm_security.py  redteam.py  secret.py  swarm.py  tailscale.py  tailsnitch.py  tavily.py  vercel.py
guardian/scripts/: ANALYSIS_SUMMARY.md  README.md  auto_fix_recommendations.py  generate_npmignore.py  generate_security_report.py  prepublish_check.sh  redteam_npm_packages.py  review_all_repos.py
guardian/sweeps/: __init__.py  local_dev.py  (+5 more)
tests/: README_VISUAL_TESTING.md  __init__.py  test_ai_editor_config_audit.py  test_cli.py  test_config.py  test_core.py  test_credential_file_audit.py  test_dashboard_visual.mjs  test_dependency_audit.py  test_discovery.py  test_error_handling.py  test_git_identity_audit.py  test_gitignore_audit.py  test_http_client.py  test_integration_dashboard.py  test_integration_discovery.py  test_integration_email.py  test_integration_mcp.py  test_mcp_security_audit.py  test_models.py  test_pre_commit_audit.py  test_private_docs_checker.py  test_project_flaudit.py  test_property_models.py  test_repo_hygiene.py  test_reporting.py  test_secret_checker.py  test_ssh_key_audit.py
tools/: sweep_public_repos.py
